Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415142 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -73,6 +73,7 @@ div#templ33t_control ul {
 	height: 27px;
 	border-bottom: 1px solid #909090;
 	overflow: hidden;
+	padding-right: -6px;
 	white-space: nowrap;
 }
 
